# comictranslator

./: .gitignore  CMakeLists.txt  Dockerfile  Jamfile  Makefile  README  bubble.cpp  bubble.hpp  bubble_ellipse.cpp  bubble_ellipse.hpp  bubble_rectangle.cpp  bubble_rectangle.hpp  cfont.cpp  cfont.hpp  color.cpp  color.hpp  comicfile.cpp  comicfile.hpp  detect.cpp  docker-entrypoint.sh  docker-run.sh  draw.cpp  edit.cpp  gui_fltk.cpp  test.cpp  utils.cpp  utils.hpp
tools/: list_fonts.cpp
